--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,12 @@ img {
 /* Перша секція start */
 
 .section-one {
-  background-image: url("../images/hero-back.jpg");
+  background-image: linear-gradient(
+      to bottom,
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url("../images/hero-back.jpg");
   background-color: #2e2f42;
   background-repeat: no-repeat;
   background-size: cover;
@@ -167,6 +172,17 @@ img {
 }
 .features-item {
   width: calc((100% - 3 * 24px) / 4);
+}
+.icon-features {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 264px;
+  height: 112px;
+  border: #8e8f99 1px solid;
+  border-radius: 4px;
+  background-color: #f4f4fd;
+  margin-bottom: 8px;
 }
 .title-features {
   font-size: 20px;
