--- a/css/styles.css
+++ b/css/styles.css
@@ -60,6 +60,18 @@ img {
 .main-nav .link:focus {
   color: #404bbf;
 }
+
+.link.studio:active::after {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  content: "";
+  width: 48px;
+  height: 4px;
+  border-radius: 2px;
+  background-color: #404bbf;
+}
 .header-container {
   display: flex;
   justify-content: space-between;
@@ -183,6 +195,7 @@ img {
   border-radius: 4px;
   background-color: #f4f4fd;
   margin-bottom: 8px;
+  max-width: 100%;
 }
 .title-features {
   font-size: 20px;
@@ -191,6 +204,7 @@ img {
   letter-spacing: 0.02em;
   color: #2e2f42;
   margin-bottom: 8px;
+  max-width: 100%;
 }
 .text-features {
   font-size: 16px;
@@ -230,7 +244,7 @@ img {
   width: 100%;
 }
 .team-member-text {
-  padding: 32px 0;
+  padding-top: 32px;
 }
 .section-three-team .team-names {
   font-size: 20px;
@@ -245,6 +259,24 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+}
+.team-member-socials {
+  display: flex;
+  justify-content: center;
+  gap: 24px;
+  margin: 8px 16px 32px;
+  /* fill: #4d5ae5; */
+}
+/* .team-member-socials .social-link:hover {
+  fill: #404bbf;
+} */
+.icon-social {
+  fill: crimson; /* змінює колір іконки */
+  transition: fill 0.3s ease;
+}
+
+.icon-social:hover {
+  fill: teal; /* інший колір при наведенні */
 }
 /* Третя секція end */
 /* Четверта секція start */
@@ -291,11 +323,46 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
 }
+.parrent-overlay {
+  position: relative;
+  width: 100%;
+  overflow: hidden;
+}
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  transition-property: transform;
+  transform: translatey(100%);
+  transition: transform 250ms ease-in-out;
+}
+.overlay p {
+  color: #f4f4fd;
+  font-weight: 400;
+  font-size: 16px;
+
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  padding: 40px 32px 164px;
+}
+.projects-item-overlay:hover .overlay {
+  transform: translatey(0);
+}
 /* Четверта секція end */
 
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
+}
+.footer-container {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  gap: 120px;
 }
 .footer-link {
   text-decoration: none;
@@ -318,4 +385,25 @@ img {
   letter-spacing: 0.02em;
   color: #f4f4fd;
   max-width: 264px;
+}
+.footer-socials {
+  width: 208px;
+  height: 80px;
+}
+.footer .social-media-title {
+  font-weight: 500;
+  font-size: 16px;
+
+  /* line-height: 24px; */
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #ffffff;
+  margin-bottom: 16px;
+}
+.footer-socials .social-media-links {
+  display: flex;
+  justify-content: center;
+  gap: 16px;
+  margin-top: 16px;
+  /* fill: #4d5ae5; */
 }
