--- a/css/styles.css
+++ b/css/styles.css
@@ -120,9 +120,7 @@ img {
     url("../images/hero-back.jpg");
   background-color: #2e2f42;
   background-repeat: no-repeat;
-  background-size: cover;
   background-position: center;
-
   padding: 188px 0;
 }
 .section-one .container {
@@ -337,7 +335,7 @@ img {
   background-color: #4d5ae5;
   transition-property: transform;
   transform: translatey(100%);
-  transition: transform 250ms ease-in-out;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .overlay p {
   color: #f4f4fd;
