--- a/css/styles.css
+++ b/css/styles.css
@@ -62,17 +62,24 @@ img {
 .main-nav .link:focus {
   color: #404bbf;
 }
-
+.link.studio {
+  position: relative;
+  color: #404bbf;
+}
 .link.studio:active::after {
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
   content: "";
-  width: 48px;
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
   height: 4px;
   border-radius: 2px;
   background-color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .header-container {
   display: flex;
@@ -99,6 +106,7 @@ img {
   color: #434455;
   text-decoration: none;
   letter-spacing: 0.02em;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-info .contact-link:hover {
   color: #404bbf;
