--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ img {
   position: relative;
   color: #404bbf;
 }
-.link.studio:active::after {
+.link.studio::after {
   display: flex;
   flex-direction: column;
   align-items: center;
