--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ img {
   color: #2e2f42;
   padding: 24px 0;
   display: inline-block;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .main-nav .link:hover,
 .main-nav .link:focus {
