--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ p {
 ul {
   margin: 0;
   padding-left: 0;
+  list-style: none;
 }
 img {
   display: block;
@@ -132,7 +133,10 @@ img {
   background-color: #2e2f42;
   background-repeat: no-repeat;
   background-position: center;
+  background-size: cover;
+  max-width: 1440px;
   padding: 188px 0;
+  margin: 0 auto;
 }
 .section-one .container {
   display: flex;
@@ -163,6 +167,7 @@ img {
   border-radius: 4px;
   border: none;
   box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .button-solutions:hover,
 .button-solutions:focus {
@@ -253,7 +258,7 @@ img {
   width: 100%;
 }
 .team-member-text {
-  padding-top: 32px;
+  padding: 32px 0;
 }
 .section-three-team .team-names {
   font-size: 20px;
@@ -268,17 +273,22 @@ img {
   line-height: 1.5;
   letter-spacing: 0.02em;
   text-align: center;
+  margin-bottom: 8px;
 }
 .team-member-socials {
   display: flex;
   justify-content: center;
   gap: 24px;
-  margin: 8px 16px 32px;
+
   /* fill: #4d5ae5; */
 }
 /* .team-member-socials .social-link:hover {
   fill: #404bbf;
 } */
+.social-link-item {
+  width: 40px;
+  height: 40px;
+}
 .icon-social {
   fill: crimson; /* змінює колір іконки */
   transition: fill 0.3s ease;
