--- a/css/styles.css
+++ b/css/styles.css
@@ -282,20 +282,27 @@ img {
 
   /* fill: #4d5ae5; */
 }
-/* .team-member-socials .social-link:hover {
-  fill: #404bbf;
-} */
+
 .social-link-item {
   width: 40px;
   height: 40px;
 }
-.icon-social {
-  fill: crimson; /* змінює колір іконки */
-  transition: fill 0.3s ease;
+.section-three-team .social-link {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-
-.icon-social:hover {
-  fill: teal; /* інший колір при наведенні */
+.section-three-team .social-link:hover,
+.section-three-team .social-link:focus {
+  background-color: #404bbf;
+}
+.section-three-team .icon-social {
+  fill: #68f132;
 }
 /* Третя секція end */
 /* Четверта секція start */
