Update icon color in section three team for improved visibility

--- a/css/styles.css
+++ b/css/styles.css
@@ -302,7 +302,7 @@ img {
   background-color: #404bbf;
 }
 .section-three-team .icon-social {
-  fill: #68f132;
+  fill: #f4f4fd;
 }
 /* Третя секція end */
 /* Четверта секція start */
