--- a/css/styles.css
+++ b/css/styles.css
@@ -287,7 +287,7 @@ img {
   width: 40px;
   height: 40px;
 }
-.section-three-team .social-link {
+.social-link {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -297,8 +297,8 @@ img {
   align-items: center;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.section-three-team .social-link:hover,
-.section-three-team .social-link:focus {
+.social-link:hover,
+.social-link:focus {
   background-color: #404bbf;
 }
 .section-three-team .icon-social {
@@ -393,8 +393,8 @@ img {
 .footer-container {
   display: flex;
   justify-content: flex-start;
-  align-items: flex-start;
-  gap: 120px;
+  align-items: baseline;
+  margin-right: 120px;
 }
 .footer-link {
   text-decoration: none;
@@ -437,5 +437,16 @@ img {
   justify-content: center;
   gap: 16px;
   margin-top: 16px;
-  /* fill: #4d5ae5; */
+  fill: #4d5ae5;
+}
+.social-link-item {
+  width: 40px;
+  height: 40px;
+}
+.footer .social-link:hover,
+.footer .social-link:focus {
+  background-color: #31d0aa;
+}
+.icon-social {
+  fill: #f4f4fd;
 }
