--- a/css/styles.css
+++ b/css/styles.css
@@ -368,9 +368,6 @@ img {
   background-color: #4d5ae5;
   transition-property: transform;
   transform: translatey(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.overlay p {
   color: #f4f4fd;
   font-weight: 400;
   font-size: 16px;
@@ -384,6 +381,9 @@ img {
 .projects-item:hover .overlay {
   transform: translatey(0);
 }
+.projects-item:hover p {
+  transform: translatey(0);
+}
 /* Четверта секція end */
 
 .footer {
@@ -394,6 +394,8 @@ img {
   display: flex;
   justify-content: flex-start;
   align-items: baseline;
+}
+.footer-logo {
   margin-right: 120px;
 }
 .footer-link {
