--- a/css/styles.css
+++ b/css/styles.css
@@ -375,7 +375,7 @@ img {
   /* line-height: 24px; */
   line-height: 1.5;
   letter-spacing: 0.02em;
-  padding: 40px 32px 164px;
+  padding: 40px 32px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .projects-item:hover .overlay {
